ajout des liens cliquables sur chaque carte des hébergements

--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,7 @@
     font-weight: 500;
 }
 
+/* section 2 dédié aux hébérgements */
 .location {
     font-size: 11px;
     background-color: var(--gris-clair);
