--- a/css/style.css
+++ b/css/style.css
@@ -1,429 +1,502 @@
-:root{
-    --bleu-clair: #DEEBFF;
-    --bleu-fonce: #0065FC;
-    --gris-clair: #F2F2F2;
-}
-
-*,::before,::after{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-*{
-    font-family: Raleway, sans-serif;
-}
-/* header */
-.header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 20px 30px;
-}
-
-.header--logo{
-    width: 120px;
-}
-
-/* nav du header */
-.header--nav{
-    width: 350px;
-    display: flex;
-}
-.header--nav ul{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-    list-style: none;
-}
-
-
-
-.header--nav a{
-    text-decoration: none;
-    color: black;
-    padding: 37px;
-}
-.header--nav a:hover{
-    color:var(--bleu-fonce);
-    border-top: solid 4px var(--bleu-fonce);
-}
-
-/* main */
-
-.menu{
-    margin: 50px 30px;
-}
-
-
-.menu .menu--section1{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 100%;
-    font-size: 16px;
-}
-/* formulaire */
-.menu--section1 .menu--search{
-    display: flex;
-}
-
-.menu--section1 .menu--marker{
-    width: 20px;
-    border: solid transparent 2px;
-    border-bottom-left-radius: 20%;
-    border-top-left-radius: 20%;
-    padding: 10px 20px 10px 10px;
-    background-color: var(--gris-clair);
-}
-
-.menu--section1 .menu--input{
-    outline: none;
-    border: none;
-    border-top: solid 1px var(--gris-clair);
-    border-bottom: solid 1px var(--gris-clair);
-    padding: 0 0 0 10px;
-    font-weight: 700;
-}
-
-.menu--section1 .menu--btn{
-    color: white;
-    background-color: var(--bleu-fonce);
-    padding: 10px 20px 10px 20px;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-    font-weight: 650;
-    border:none
-}
-
-.menu--section1 .menu--filtre{
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 40px;
-}
-
-.menu--filtre > p{
-    font-weight: 600;
-}
-
-.menu--filtre--categorie{
-    display: flex;
-    align-items: center;
-}
-
-
-.menu--filtre--categorie i{
-    border: solid 1px var(--bleu-clair);
-    border-radius: 50%;
-    color: var(--bleu-fonce);
-    background-color: var(--bleu-clair);
-    padding: 7px;
-    position: relative;
-    left: 7px;
-}
-.menu--filtre--categorie p{   
-    padding: 5px 15px;
-    font-weight: 600;
-}
-.menu--filtre--categorie p:hover{   
-    color: var(--bleu-clair);
-    background-color: var(--bleu-fonce);
-    cursor: pointer;
-}
-
-.menu--filtre--radius{
-    border-top: solid 1px var(--bleu-clair);
-    border-bottom: solid 1px var(--bleu-clair);
-    border-right: solid 1px var(--bleu-clair);
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-
-.menu--margin--bottom{
-    margin-bottom: 20px;;
-}
-
-.menu--section1 .menu--information{
-    display: flex;
-    align-items: center;
-}
-
-.menu--information i{
-    color: var(--bleu-fonce);
-    margin-right: 5px;
-    border: solid 1.5px var(--gris-clair);
-    padding: 5px;
-    border-radius: 50%;
-    font-size: 10px;
-    font-weight: 600;
-}
-
-.menu--information p{
-    font-weight: 500;
-}
-
-/* section 2 dédié aux hébérgements */
-.section--principal{
-    display: flex;
-    justify-content: space-between;
-}
-
-.section--commune{
-    font-size: 16px;
-    background-color: var(--gris-clair);
-    border-radius: 15px;
-}
-
-.location {  
-    width:60%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: baseline;
-    padding: 0 40px 15px 40px;
-}
-
-.location h2{
-    margin-top: 18px;
-    margin-left: 15px;
-}
-
-.location--liste{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    width: 100%;
-    height: 100%;
-}
-.location--liste article{
-    width: 30%;
-    height: 200px;
-    background-color: white;
-    border-radius: 10px;
-    padding: 5px;
-    margin-top: 19px;
-    display: flex;
-    flex-direction: column;
-}
-
-.location--liste article a{
-    text-decoration: none;
-    color: black
-}
-.location--liste article a:hover,
-.location--liste article p:hover{
-    color: var(--bleu-fonce)
-}
-
-.location--titre{
-    font-weight: bold;
-    font-size: 18px;
-}
-
-.location--liste img{
-    width: 100%;
-    height: 100px;
-    object-fit: cover;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;       
-}
-
-.location--liste article img,
-.location--liste article p,
-.location--liste article .location--etoile{
-    margin-bottom: 9px;
-}
-
-
-.location--etoile{
-    display: flex;
-}
-.location--etoile i{
-    font-size: 12px;
-}
-.location--etoile i:nth-child(1),
-.location--etoile i:nth-child(2),
-.location--etoile i:nth-child(3){
-    color: var(--bleu-fonce)
-}
-.location--etoile i:nth-child(4),
-.location--etoile i:nth-child(5){
-    color: var(--gris-clair);
-}
-
-.toute--etoile i{
-    color: var(--bleu-fonce)
-}
-.quatre--etoile i:not(:last-child){
-    color: var(--bleu-fonce)
-}
-
-.location p:last-child{
-    margin-left: 15px;
-    margin-bottom: 15px;
-    font-weight: 600;
-    letter-spacing: 1px;
-}
-
-/* hébergement populaires */
-
-.location--populaire{
-    width: 30%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-}
-
-.location--titre--logo{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin: 15px 0 15px 0;
-}
-
-.location--titre--logo i{
-    font-size: 20px;
-}
-
-.location--liste--pop{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.location--liste--pop article{
-    width: 80%;
-    height: 160px;
-    display: flex;
-    justify-content: space-around;
-    background-color: white;
-    border-radius: 10px;
-    margin-bottom: 30px;
-    padding: 5px 10px 5px 5px
-}
-
-.location--liste--pop article:hover{
-    cursor: pointer;
-    color: var(--bleu-fonce);
-}
-
-.location--image-pop{
-    width: 100%;
-    height: 100%;
-    
-}
-.location--image-pop img{
-    width: 100%;
-    height: 100%;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-    object-fit: cover;
-
-}
-.location--description--pop{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    position: relative;
-}
-
-.location--description--pop  p:first-child{
-    margin-bottom: 10px;
-    margin-top: 10px;
-}
-.location--description--pop  p{
-    margin-left: 10px;
-}
-
-.location--description--pop .location--etoile{
-    position: absolute;
-    bottom: 10px;
-    margin-left: 10px;
-}
-
-/* activité à marseille */
-
-.activite-marseille{
-    display: flex;
-    flex-direction: column;
-    margin-top: 40px;
-}
-
-.activite--groupe{
-    display: flex;
-    flex-direction: row;
-    margin-top: 15px;
-    
-}
-
-.activite--groupe p{
-    padding: 15px 0 15px 15px;
-    font-weight: 600;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    box-shadow: 0 2px 0 rgb(0,0,0,0.4);
-}
-.activite--ville{
-    display: flex;
-    flex-direction: column;
-    width: 25%;
-    margin-right: 20px;
-}
-
-
-.activite--ville--deux{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 25%;
-    margin-right: 20px;
-}
-.activite--ville--deux  img{
-    height: 210px;
-}
-
-
-.activite-marseille img{
-    width: 100%;
-    object-fit: cover;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-}
-
-.image--port, .image--calanques{
-    height: 550px;  
-}
-
-/* footer */
-
-.footer{
-    background-color: var(--gris-clair);
-    display: flex;
-    justify-content: space-around;
-    padding: 60px 20px;
-}
-
-
-.footer div{
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-}
-
-.footer h3{
-    margin-bottom: 20px;
-}
-
-.footer--nav ul{
-    list-style: none;
-}
-
-.footer--liste{
-    margin-bottom: 9px;
-    letter-spacing: 1px;
+	:root{
+		--bleu-clair: #DEEBFF;
+		--bleu-fonce: #0065FC;
+		--gris-clair: #F2F2F2;
+	}
+
+	*,::before,::after{
+		margin: 0;
+		padding: 0;
+		box-sizing: border-box;
+	}
+
+	*{
+		font-family: Raleway, sans-serif;
+	}
+	/* header */
+	.header{
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		margin: 20px 30px;
+	}
+
+	.header--logo{
+		width: 120px;
+	}
+
+	/* nav du header */
+	.header--nav{
+		width: 350px;
+		display: flex;
+	}
+	.header--nav ul{
+		display: flex;
+		justify-content: space-around;
+		align-items: center;
+		width: 100%;
+		list-style: none;
+	}
+
+
+
+	.header--nav a{
+		text-decoration: none;
+		color: black;
+		padding: 37px;
+	}
+	.header--nav a:hover{
+		color:var(--bleu-fonce);
+		border-top: solid 4px var(--bleu-fonce);
+	}
+
+	/* main */
+
+	.menu{
+		margin: 50px 30px;
+	}
+
+
+	.menu .menu--section1{
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		width: 100%;
+		font-size: 16px;
+	}
+	/* formulaire */
+	.menu--section1 .menu--search{
+		display: flex;
+	}
+
+	.menu--section1 .menu--marker{
+		width: 20px;
+		border: solid transparent 2px;
+		border-bottom-left-radius: 20%;
+		border-top-left-radius: 20%;
+		padding: 10px 20px 10px 10px;
+		background-color: var(--gris-clair);
+	}
+
+	.menu--section1 .menu--input{
+		outline: none;
+		border: none;
+		border-top: solid 1px var(--gris-clair);
+		border-bottom: solid 1px var(--gris-clair);
+		padding: 0 0 0 10px;
+		font-weight: 700;
+	}
+
+
+	.menu--section1 .menu--btn{
+		color: white;
+		background-color: var(--bleu-fonce);
+		padding: 10px 20px 10px 20px;
+		border-top-right-radius: 10px;
+		border-bottom-right-radius: 10px;
+		font-weight: 650;
+		border:none;
+		cursor: pointer;
+	}
+
+	.menu--section1 .menu--filtre{
+		display: flex;
+		align-items: center;
+		flex-wrap: wrap;
+		gap: 40px;
+	}
+
+	.menu--filtre > p{
+		font-weight: 600;
+	}
+
+	.menu--filtre--categorie{
+		display: flex;
+		align-items: center;
+	}
+
+
+	.menu--filtre--categorie i{
+		border: solid 1px var(--bleu-clair);
+		border-radius: 50%;
+		color: var(--bleu-fonce);
+		background-color: var(--bleu-clair);
+		padding: 7px;
+		position: relative;
+		left: 7px;
+	}
+	.menu--filtre--categorie p{   
+		padding: 5px 15px;
+		font-weight: 600;
+	}
+	.menu--filtre--categorie p:hover{   
+		color: var(--bleu-clair);
+		background-color: var(--bleu-fonce);
+		cursor: pointer;
+	}
+
+	.menu--filtre--radius{
+		border-top: solid 1px var(--bleu-clair);
+		border-bottom: solid 1px var(--bleu-clair);
+		border-right: solid 1px var(--bleu-clair);
+		border-top-right-radius: 10px;
+		border-bottom-right-radius: 10px;
+	}
+
+	.menu--margin--bottom{
+		margin-bottom: 20px;;
+	}
+
+	.menu--section1 .menu--information{
+		display: flex;
+		align-items: center;
+	}
+
+	.menu--information i{
+		color: var(--bleu-fonce);
+		margin-right: 5px;
+		border: solid 1.5px var(--gris-clair);
+		padding: 5px;
+		border-radius: 50%;
+		font-size: 10px;
+		font-weight: 600;
+	}
+
+	.menu--information p{
+		font-weight: 500;
+	}
+
+	/* section 2 dédié aux hébérgements */
+	.section--principal{
+		display: flex;
+		justify-content: space-between;
+	}
+
+	.section--commune{
+		font-size: 16px;
+		background-color: var(--gris-clair);
+		border-radius: 15px;
+	}
+
+	.location {  
+		width:60%;
+		height: auto;
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: baseline;
+		padding: 0 40px 15px 40px;
+	}
+
+	.location h2{
+		margin-top: 18px;
+		margin-left: 15px;
+	}
+
+	.location--liste{
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+		width: 100%;
+		height: 100%;
+	}
+	.location--liste article{
+		width: 30%;
+		height: auto;
+		background-color: white;
+		border-radius: 10px;
+		padding: 5px;
+		margin-top: 19px;
+		display: flex;
+		flex-direction: column;
+	}
+
+	.location--liste article a{
+		text-decoration: none;
+		color: black
+	}
+	.location--liste article a:hover,
+	.location--liste article p:hover{
+		color: var(--bleu-fonce)
+	}
+
+	.location--titre{
+		font-weight: bold;
+		font-size: 18px;
+	}
+
+	.location--liste img{
+		width: 100%;
+		height: 100px;
+		object-fit: cover;
+		border-top-left-radius: 10px;
+		border-top-right-radius: 10px;       
+	}
+
+	.location--liste article img,
+	.location--liste article p,
+	.location--liste article .location--etoile{
+		margin-bottom: 9px;
+	}
+
+
+	.location--etoile{
+		display: flex;
+	}
+	.location--etoile i{
+		font-size: 12px;
+	}
+	.location--etoile i:nth-child(1),
+	.location--etoile i:nth-child(2),
+	.location--etoile i:nth-child(3){
+		color: var(--bleu-fonce)
+	}
+	.location--etoile i:nth-child(4),
+	.location--etoile i:nth-child(5){
+		color: var(--gris-clair);
+	}
+
+	.toute--etoile i{
+		color: var(--bleu-fonce)
+	}
+	.quatre--etoile i:not(:last-child){
+		color: var(--bleu-fonce)
+	}
+
+	.location p:last-child{
+		margin-left: 15px;
+		margin-bottom: 15px;
+		margin-top: 20px;
+		font-weight: 600;
+		letter-spacing: 1px;
+	}
+
+	/* hébergement populaires */
+
+	.location--populaire{
+		width: 30%;
+		height: auto;
+		display: flex;
+		flex-direction: column;
+	}
+
+	.location--titre--logo{
+		display: flex;
+		justify-content: space-around;
+		align-items: center;
+		margin: 15px 0 15px 0;
+	}
+
+	.location--titre--logo i{
+		font-size: 20px;
+	}
+
+	.location--liste--pop{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.location--liste--pop article{
+		width: 80%;
+		height: 170px;
+		display: flex;
+		justify-content: space-around;
+		background-color: white;
+		border-radius: 10px;
+		margin-bottom: 30px;
+		padding: 5px 10px 5px 5px
+	}
+
+	.location--liste--pop article:hover{
+		cursor: pointer;
+		color: var(--bleu-fonce);
+	}
+
+	.location--image-pop{
+		width: 100%;
+		height: 100%;
+		
+	}
+	.location--image-pop img{
+		width: 100%;
+		height: 100%;
+		border-top-left-radius: 10px;
+		border-bottom-left-radius: 10px;
+		object-fit: cover;
+
+	}
+	.location--description--pop{
+		width: 100%;
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		position: relative;
+		margin-left: 10px;
+	}
+
+	.location--description--pop  p:first-child{
+		margin-bottom: 10px;
+		margin-top: 10px;
+	}
+	.location--description--pop  p{
+	}
+
+	.location--description--pop .location--etoile{
+		position: absolute;
+		bottom: 2px;
+	}
+
+	/* activité à marseille */
+
+	.activite-marseille{
+		display: flex;
+		flex-direction: column;
+		margin-top: 40px;
+	}
+
+	.activite--groupe{
+		display: flex;
+		flex-direction: row;
+		margin-top: 15px;
+		
+	}
+
+	.activite--groupe p{
+		padding: 15px 0 15px 15px;
+		font-weight: 600;
+		border-bottom-left-radius: 20px;
+		border-bottom-right-radius: 20px;
+		box-shadow: 0 2px 0 rgba(0,0,0,0.4);
+	}
+	.activite--ville{
+		display: flex;
+		flex-direction: column;
+		width: 25%;
+		margin-right: 20px;
+	}
+
+
+	.activite--ville--deux{
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		width: 25%;
+		margin-right: 20px;
+	}
+
+	.activite--ville--deux img{
+	height: 215px;
+	}
+
+
+	.activite-marseille img{
+		width: 100%;
+		object-fit: cover;
+		border-top-left-radius: 20px;
+		border-top-right-radius: 20px;
+	}
+
+	.image--port, .image--calanques{
+		height: 550px;  
+	}
+
+	/* footer */
+
+	.footer{
+		background-color: var(--gris-clair);
+		display: flex;
+		justify-content: space-around;
+		padding: 60px 20px;
+	}
+
+
+	.footer div{
+		width: 30%;
+		display: flex;
+		flex-direction: column;
+	}
+
+	.footer h3{
+		margin-bottom: 20px;
+	}
+
+	.footer--nav ul{
+		list-style: none;
+	}
+
+	.footer--liste{
+		margin-bottom: 9px;
+		letter-spacing: 1px;
+	}
+
+	/* responsive design tablette: 992px */
+
+	@media all and (max-width: 992px){
+	.section--principal{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	/* hébergements à Marseille */
+	.location {  
+		width:100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: baseline;
+		padding: 0 40px 15px 40px;
+		margin-bottom: 25px;
+	}
+
+	.location p:last-child{
+		margin-top: 20px;
+	}
+
+	/* hébergement populaires */
+
+	.location--populaire{
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+	}
+
+	.location--titre--logo{
+		margin: 20px 0 20px 0;
+	}
+
+	.location--liste--pop article{
+		width: 70%
+	}
+
+	/* activités à Marseille*/
+
+	.activite--groupe{
+		display: flex;
+		flex-direction: column;
+	}
+
+	.activite--groupe img{
+		height: 300px;
+	}
+
+	.activite--ville, .activite--ville--deux{
+		display: flex;
+		flex-direction: column;
+		width: 100%;
+	}
+
+	.activite--ville, .activite--ville--deux div{
+		margin-bottom: 50px;
+	}
+
+	div.activite--longchamp{
+		margin-bottom: 0;
+	}
+
+	.footer{
+		padding: 50px 20px;
+	}
 }
