--- a/css/style.css
+++ b/css/style.css
@@ -80,8 +80,11 @@
 	border: solid transparent 2px;
 	border-bottom-left-radius: 20%;
 	border-top-left-radius: 20%;
-	padding: 10px 20px 10px 10px;
+	padding: 15px 20px 15px 20px;
 	background-color: var(--gris-clair);
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .menu--section1 .menu--input {
@@ -113,14 +116,20 @@
 	display: flex;
 	align-items: center;
 	flex-wrap: wrap;
-	gap: 40px;
+	gap: 10px;
 }
 
 .menu--filtre > p {
 	font-weight: 600;
+	margin-right: 20px;
 }
 
 .menu--filtre--categorie {
+	display: flex;
+	align-items: center;
+}
+
+.menu--deux-filtres{
 	display: flex;
 	align-items: center;
 }
@@ -131,14 +140,20 @@
 	border-radius: 50%;
 	color: var(--bleu-fonce);
 	background-color: var(--bleu-clair);
-	padding: 7px;
-	position: relative;
-	left: 7px;
+	padding: 17px;
+	font-size: 17px;
+	z-index: 4;
 }
 
 .menu--filtre--categorie p {
-	padding: 5px 15px;
+	position: relative;
+	right: 45px;
+	z-index: 3;
+	padding: 17px 15px 17px 56px;
 	font-weight: 600;
+	font-size: 17px;
+	border-radius: 25px;
+	border: solid 1px var(--bleu-clair);
 }
 
 .menu--filtre--categorie p:hover {
@@ -169,10 +184,13 @@
 	color: var(--bleu-fonce);
 	margin-right: 5px;
 	border: solid 1.5px var(--gris-clair);
-	padding: 5px;
-	border-radius: 50% 50%;
-	font-size: 13px;
+	padding: 8px;
+	border-radius: 50%;
+	font-size: 15px;
 	font-weight: 600;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .menu--information p {
@@ -182,7 +200,7 @@
 /* section 2 dédié aux hébérgements */
 .section--principal {
 	display: flex;
-	gap: 20px;
+	gap: 40px;
 }
 
 .section--commune {
@@ -192,18 +210,20 @@
 }
 
 .location {
-	width: 100%;
+	width: 80%;
 	height: auto;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: baseline;
-	padding: 0 40px 15px 40px;
+	padding: 0 40px 0 40px;
+	min-width: 640px;
 }
 
 .location h2 {
-	margin-top: 18px;
+	margin-top: 35px;
 	margin-left: 15px;
+	margin-bottom: 25px;
 }
 
 .location--liste {
@@ -218,9 +238,9 @@
 	width: 30%;
 	height: auto;
 	background-color: white;
-	border-radius: 10px;
+	border-radius: 20px;
 	padding: 5px;
-	margin-top: 19px;
+	margin-bottom: 40px;
 	display: flex;
 	flex-direction: column;
 }
@@ -242,7 +262,7 @@
 
 .location--liste img {
 	width: 100%;
-	height: 168px;
+	height: 150px;
 	object-fit: cover;
 	border-top-left-radius: 10px;
 	border-top-right-radius: 10px;
@@ -285,8 +305,7 @@
 
 .location p:last-child {
 	margin-left: 15px;
-	margin-bottom: 15px;
-	margin-top: 20px;
+	margin-bottom: 40px;
 	font-weight: 600;
 	letter-spacing: 1px;
 }
@@ -295,7 +314,7 @@
 
 .location--populaire {
 	width: 30%;
-	min-width: 300px;
+	min-width: 360px;
 	height: auto;
 	display: flex;
 	flex-direction: column;
@@ -305,7 +324,8 @@
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
-	margin: 15px 0 15px 0;
+	margin-top: 35px;
+	margin-bottom: 25px;
 }
 
 .location--titre--logo i {
@@ -324,8 +344,8 @@
 	display: flex;
 	justify-content: space-around;
 	background-color: white;
-	border-radius: 10px;
-	margin-bottom: 30px;
+	border-radius: 20px;
+	margin-bottom: 40px;
 	padding: 5px 10px 5px 5px
 }
 
@@ -335,7 +355,7 @@
 }
 
 .location--image-pop {
-	width: 100%;
+	width: 75%;
 	height: 100%;
 
 }
@@ -356,7 +376,7 @@
 	flex-direction: column;
 	justify-content: flex-start;
 	position: relative;
-	margin-left: 10px;
+	margin-left: 20px;
 }
 
 .location--description--pop .location--titre--pop {
@@ -397,7 +417,7 @@
 	display: flex;
 	flex-direction: column;
 	width: 25%;
-	margin-right: 20px;
+	margin-right: 40px;
 }
 
 
@@ -409,7 +429,7 @@
 }
 
 .activite--groupe > div:nth-child(2){
-	margin-right: 20px;
+	margin-right: 40px;
 }
 
 .activite--ville--deux img {
@@ -500,7 +520,6 @@
 	}
 
 	.location--titre--logo {
-		margin: 20px 0 20px 0;
 		justify-content: space-between;
 		padding: 0 25px 0 25px;
 	}
@@ -631,16 +650,19 @@
 		padding-right: 20px;
 	}
 
-	.menu--section1 .menu--marker {
-		padding: 15px 25px 15px 15px;
+	.menu--section1 .menu--input{
+		width: 300px;
 	}
+
 
 		/* location populaire */
 	.location--populaire{
 		border-radius: 0;
 	}
 	.location--liste--pop article{
-		width: 95%;
+		/* width: 95%; */
+		margin-left: 20px;
+		margin-right: 20px;
 	}
 
 	/* hébergements */
@@ -650,6 +672,7 @@
 
 	.location{
 		padding: 0 20px 0 20px;
+		min-width: 0;
  	}
 
 	.location h2{
@@ -667,6 +690,10 @@
 		box-shadow: 1px 1px 3px rgba(0,0,0,0.5);
 	}
 
+	.location--liste article:last-child{
+		margin-bottom: 0;
+	}
+
 	.location--liste article img{
 		height: 110px;
 	}
@@ -675,7 +702,6 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		margin: 15px 0 15px 0;
 		padding-left: 20px;
 		padding-right: 20px;
 	}
@@ -709,12 +735,13 @@
 		flex-direction: column;
 		align-items: flex-start;
 	}
-
-	.foote--aPropos{
-		width: inherit;
-	}
 	.footer div{
 		margin-bottom: 10px;
 		justify-content: space-around;
+		width: 100%;
+	}
+
+	.footer nav a{
+		font-size: 14px;
 	}
 }
