dernière retouche avant soutenance

--- a/css/style.css
+++ b/css/style.css
@@ -415,7 +415,7 @@
 	font-weight: 600;
 	border-bottom-left-radius: 20px;
 	border-bottom-right-radius: 20px;
-	box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
 }
 
 .activite--ville {
@@ -589,9 +589,10 @@
 	}
 
 	.header--logo {
-		width: 130px;
+		width: 120px;
+		text-align: center;
 		display: block;
-		margin: 30px auto;
+		margin: 30px 50%;
 	}
 	
 	/* nav du header */
@@ -636,16 +637,18 @@
 		display: none;
 	}
 	.menu--icon--search{
-		display: inline-block;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 		color: white;
 		background-color: var(--bleu-fonce);
-		padding: 15px 15px 15px 15px;
+		padding: 15px 25px 15px 25px;
 		border-radius: 15px;
 		font-weight: 650;
 		border: none;
 		cursor: pointer;
 		position: relative;
-		left: -15px;
+		left: -7px;
 		width: 50px;
 	}
 
@@ -660,7 +663,7 @@
 	}
 
 	.menu--section1 .menu--input{
-		width: 300px;
+		width: 100%;
 	}
 
 	.menu--filtre--categorie p{
@@ -699,7 +702,7 @@
 	.location--liste article{
 		width: 100%;
 		height: 210px;
-		box-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+		box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);;
 	}
 
 	.location--liste article:last-child{
@@ -748,7 +751,7 @@
 		align-items: flex-start;
 	}
 	.footer div{
-		margin-bottom: 10px;
+		margin-bottom: 30px;
 		justify-content: space-around;
 		width: 100%;
 	}
